v0.8.6 - Updated config and onEntityDamage, and onCreatureSpawn